--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <script>
             // print the PDB file to the Javascript variable
-            let pdbFile = ‘…’;
+            let pdbFile = 'lightdock_0.pdb’;
             // read the PDB data and store the returned Moleculedata structure as the variable, structure
             let pdbStructure = ChemDoodle.readPDB(pdbFile);
             // declare our 3D component
