--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
                 let pdbStructure = ChemDoodle.readPDB(pdbFile);
                 // declare our 3D component
                 let display3d = new ChemDoodle.TransformCanvas3D('display3d', 400, 400);
+                // set the 3D representation for ligand atoms
+                display3d.styles.set3DRepresentation('van der Waals Spheres');
+                // set the 3D representation for the protein and nucleic acid atoms and set them to be displayed
+                // first, create a new Styles object
+                let newSpecs = new ChemDoodle.structures.Styles();
             } catch (error) {
                 console.error("An error occurred:", error);
             }
