--- a/index.html
+++ b/index.html
@@ -11,17 +11,27 @@
     <div id="display3d" style="width: 400px; height: 400px;"></div>
 
     <!-- Include the ChemDoodle Web JavaScript -->
-    <script src="https://web.chemdoodle.com/latest/ChemDoodleWeb.js"></script>
-
-    <script>
+    <script src="https://web.chemdoodle.com/latest/ChemDoodleWeb.js">
         try {
-            // Print the PDB file to the JavaScript variable
+            // print the PDB file to the Javascript variable
             let pdbFile = 'lightdock_0.pdb';
-            // Read the PDB data and store the returned Moleculedata structure as the variable, structure
+            // read the PDB data and store the returned Moleculedata structure as the variable, structure
             let pdbStructure = ChemDoodle.readPDB(pdbFile);
-            // Declare our 3D component
+            // declare our 3D component
             let display3d = new ChemDoodle.TransformCanvas3D('display3d', 400, 400);
-            // Add the molecule to the 3D display
+            // set the 3D representation for ligand atoms
+            display3d.styles.set3DRepresentation('van der Waals Spheres');
+            // set the 3D representation for the protein and nucleic acid atoms and set them to be displayed
+            // first, create a new Styles object
+            let newSpecs = new ChemDoodle.structures.Styles();
+            // display these atoms in wireframe
+            newSpecs.set3DRepresentation('Wireframe');
+            // set the residueSpecs variable for the Canvas3D to bind it
+            display3d.residueSpecs = newSpecs;
+            // set the original styles to display the protein and nucleic acid atoms and bonds
+            display3d.styles.macro_displayAtoms = true;
+            display3d.styles.macro_displayBonds = true;
+            // load the molecule into the Canvas
             display3d.loadMolecule(pdbStructure);
         } catch (error) {
             console.error("An error occurred:", error);
