--- a/index.html
+++ b/index.html
@@ -1,41 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>ChemDoodle Web Demo</title>
-    <!-- Include the ChemDoodle Web CSS -->
-    <link rel="stylesheet" href="https://web.chemdoodle.com/latest/ChemDoodleWeb.css">
-</head>
-<body>
-    <!-- Create a container for the 3D display -->
-    <div id="display3d" style="width: 400px; height: 400px;"></div>
-
-    <!-- Include the ChemDoodle Web JavaScript -->
-    <script src="https://web.chemdoodle.com/latest/ChemDoodleWeb.js">
-        try {
-            // print the PDB file to the Javascript variable
-            let pdbFile = 'lightdock_0.pdb';
-            // read the PDB data and store the returned Moleculedata structure as the variable, structure
-            let pdbStructure = ChemDoodle.readPDB(pdbFile);
-            // declare our 3D component
-            let display3d = new ChemDoodle.TransformCanvas3D('display3d', 400, 400);
-            // set the 3D representation for ligand atoms
-            display3d.styles.set3DRepresentation('van der Waals Spheres');
-            // set the 3D representation for the protein and nucleic acid atoms and set them to be displayed
-            // first, create a new Styles object
-            let newSpecs = new ChemDoodle.structures.Styles();
-            // display these atoms in wireframe
-            newSpecs.set3DRepresentation('Wireframe');
-            // set the residueSpecs variable for the Canvas3D to bind it
-            display3d.residueSpecs = newSpecs;
-            // set the original styles to display the protein and nucleic acid atoms and bonds
-            display3d.styles.macro_displayAtoms = true;
-            display3d.styles.macro_displayBonds = true;
-            // load the molecule into the Canvas
-            display3d.loadMolecule(pdbStructure);
-        } catch (error) {
-            console.error("An error occurred:", error);
-        }
-    </script>
-</body>
+    <head>
+        <link rel="stylesheet" href="install/ChemDoodleWeb.css" type="text/css">
+        <body>
+                <script src="install/ChemDoodleWeb.js">
+                // print the PDB file to the Javascript variable
+                let pdbFile = 'lightdock_0.pdb';
+                // read the PDB data and store the returned Moleculedata structure as the variable, structure
+                let pdbStructure = ChemDoodle.readPDB(pdbFile);
+                // declare our 3D component
+                let display3d = new ChemDoodle.TransformCanvas3D('display3d', 400, 400);
+                // set the 3D representation for ligand atoms
+                display3d.styles.set3DRepresentation('van der Waals Spheres');
+                // set the 3D representation for the protein and nucleic acid atoms and set them to be displayed
+                // first, create a new Styles object
+                let newSpecs = new ChemDoodle.structures.Styles();
+                // display these atoms in wireframe
+                newSpecs.set3DRepresentation('Wireframe');
+                // set the residueSpecs variable for the Canvas3D to bind it
+                display3d.residueSpecs = newSpecs;
+                // set the original styles to display the protein and nucleic acid atoms and bonds
+                display3d.styles.macro_displayAtoms = true;
+                display3d.styles.macro_displayBonds = true;
+                // load the molecule into the Canvas
+                display3d.loadMolecule(pdbStructure);
+            </script>
+        </body>
+    </head>
 </html>
