--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- Create a container for the 3D display -->
     <div id="display3d" style="width: 400px; height: 400px;"></div>
 
-    <!-- Include the ChemDoodle Web JavaScript -->
+    <!-- Include first ChemDoodleWeb package -->
     <script type="text/javascript" src="install/ChemDoodleWeb.js"></script>
 
-    <!-- Execute JavaScript code after the library is loaded -->
+    <!-- load molecule into 3D viewer -->
     <script>
         // print the PDB file to the Javascript variable
         let pdbFile = 'lightdock_0.pdb';
