--- a/index.html
+++ b/index.html
@@ -15,33 +15,32 @@
 
     <!-- load molecule into 3D viewer -->
     <script>
-        // print the PDB file to the Javascript variable
-        let pdbFile = 'lightdock_0.pdb';
-        // read the PDB data and store the returned Moleculedata structure as the variable, structure
-        let pdbStructure = ChemDoodle.readPDB(pdbFile);
-        // declare our 3D component
-        let display3d = new ChemDoodle.TransformCanvas3D('display3d', 400, 400);
-
-        // Function to be called after content is loaded
-        display3d.afterLoadContent = function() {
-            // Set the field of view after the content is loaded
-            display3d.fieldOfView = 45; // Set your desired field of view here
-        };
-
-        // set the 3D representation for ligand atoms
-        display3d.styles.set3DRepresentation('van der Waals Spheres');
-        // set the 3D representation for the protein and nucleic acid atoms and set them to be displayed
-        // first, create a new Styles object
-        let newSpecs = new ChemDoodle.structures.Styles();
-        // display these atoms in wireframe
-        newSpecs.set3DRepresentation('Wireframe');
-        // set the residueSpecs variable for the Canvas3D to bind it
-        display3d.residueSpecs = newSpecs;
-        // set the original styles to display the protein and nucleic acid atoms and bonds
-        display3d.styles.macro_displayAtoms = true;
-        display3d.styles.macro_displayBonds = true;
-        // load the molecule into the Canvas
-        display3d.loadMolecule(pdbStructure);
+        try {
+            // print the PDB file to the Javascript variable
+            let pdbFile = 'lightdock_0.pdb';
+            // read the PDB data and store the returned Moleculedata structure as the variable, structure
+            let pdbStructure = ChemDoodle.readPDB(pdbFile);
+            // declare our 3D component
+            let display3d = new ChemDoodle.TransformCanvas3D('display3d', 400, 400);
+            // set the 3D representation for ligand atoms
+            display3d.styles.set3DRepresentation('van der Waals Spheres');
+            // set the 3D representation for the protein and nucleic acid atoms and set them to be displayed
+            // first, create a new Styles object
+            let newSpecs = new ChemDoodle.structures.Styles();
+            // display these atoms in wireframe
+            newSpecs.set3DRepresentation('Wireframe');
+            // set the residueSpecs variable for the Canvas3D to bind it
+            display3d.residueSpecs = newSpecs;
+            // set the original styles to display the protein and nucleic acid atoms and bonds
+            display3d.styles.macro_displayAtoms = true;
+            display3d.styles.macro_displayBonds = true;
+            // load the molecule into the Canvas
+            display3d.loadMolecule(pdbStructure);
+        } catch (error) {
+            console.error('An error occurred:', error);
+            // Display an error message to the user
+            alert('An error occurred while loading the viewer. Please try again later.');
+        }
     </script>
 </body>
 </html>
